--- a/manifests/generator-job.yaml
+++ b/manifests/generator-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: playlist-rules-generator-job-
+  name: playlist-rules-generator-job
   namespace: carlosleao
   labels:
     app: playlist-rules-generator-job
@@ -13,8 +13,8 @@ spec:
     spec:
       containers:
         - name: playlist-rules-generator
-          image: chbmleao/playlist-rules-generator:0.1
-          command: ["python3", "app.py"]
+          image: chbmleao/playlist-rules-generator:0.7
+          command: ["sh", "entrypoint.sh"]
           volumeMounts:
             - mountPath: /app/data
               name: shared-storage
@@ -23,7 +23,4 @@ spec:
         - name: shared-storage
           persistentVolumeClaim:
             claimName: project2-pvc-carlosleao
-      syncPolicy:
-        automated:
-          prune: true
   backoffLimit: 4
