--- a/manifests/generator-job.yaml
+++ b/manifests/generator-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: playlist-rules-generator-job
+  generateName: playlist-rules-generator-job-
   namespace: carlosleao
   labels:
     app: playlist-rules-generator-job
