--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -13,12 +13,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install yq
-        run: |
-          sudo apt-get update && sudo apt-get install -y software-properties-common
-          sudo add-apt-repository -y ppa:rmescandon/yq
-          sudo apt-get update && sudo apt-get install -y yq
-
       - name: Get commit short hash
         id: get_hash
         run: echo "::set-output name=hash::$(git rev-parse --short HEAD)"
@@ -28,7 +22,7 @@ jobs:
           YAML_FILE="manifests/generator-job.yaml" # Replace with the path to your YAML file
           HASH="${{ steps.get_hash.outputs.hash }}"
 
-          yq eval ".metadata.name += \"-${HASH}\"" -i "$YAML_FILE"
+          run: sed -i "s/^  name: .*/  name: playlist-rules-generator-job-${HASH}/" "$YAML_FILE"
 
       - name: Commit and push changes
         run: |
