--- a/manifests/generator-job.yaml
+++ b/manifests/generator-job.yaml
@@ -18,6 +18,14 @@ spec:
           volumeMounts:
             - mountPath: /app/data
               name: shared-storage
+        - name: redeploy-trigger
+          image: bitnami/kubectl:latest
+          command:
+            - /bin/sh
+            - -c
+            - |
+              kubectl delete service playlist-recommender-service
+              kubectl delete deploy playlist-recommender
       restartPolicy: Never
       volumes:
         - name: shared-storage
