--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -19,9 +19,12 @@ spec:
     spec:
       containers:
         - name: recommender-container
-          image: chbmleao/playlists-recommender-system:0.2
+          image: chbmleao/playlists-recommender-system:0.3
           ports:
             - containerPort: 5000
+          env:
+            - name: IMAGE_VERSION
+              value: "0.3"
           volumeMounts:
             - mountPath: /app/data
               name: shared-storage
