--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -17,9 +17,9 @@ jobs:
         id: get_hash
         run: echo "::set-output name=hash::$(git rev-parse --short HEAD)"
 
-      - name: Modify Kubernetes YAML file
+      - name: Modify Kubernetes generator job YAML file
         run: |
-          YAML_FILE="manifests/generator-job.yaml" # Replace with the path to your YAML file
+          YAML_FILE="manifests/generator-job.yaml"
           HASH="${{ steps.get_hash.outputs.hash }}"
 
           sed -i "s/^  name: playlist-rules-generator-job.*/  name: playlist-rules-generator-job-${HASH}/" "$YAML_FILE"
@@ -29,5 +29,34 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add manifests/generator-job.yaml
-          git commit -m "Updated Kubernetes YAML with hash ${{ steps.get_hash.outputs.hash }}"
+          git commit -m "Updated Kubernetes generator job YAML with hash ${{ steps.get_hash.outputs.hash }}"
+          git push
+
+  update-deployment:
+    runs-on: ubuntu-latest
+    needs: update-yaml
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Get commit short hash
+        id: get_hash
+        run: echo "::set-output name=hash::$(git rev-parse --short HEAD)"
+
+      - name: Sleep for Timer
+        run: sleep 300
+
+      - name: Modify Kubernetes deployment YAML file
+        run: |
+          YAML_FILE="manifests/deployment.yaml"
+          HASH="${{ steps.get_hash.outputs.hash }}"
+
+          sed -i "s/^  name: playlist-recommender.*/  name: playlist-recommender-${HASH}/" "$YAML_FILE"
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add manifests/deployment.yaml
+          git commit -m "Updated Kubernetes deployment YAML with hash ${{ steps.get_hash.outputs.hash }}"
           git push
